Fix global analyses popover css, to prevent a position shift.

--- a/refinery/static/source/styles/less/refinery-style.less
+++ b/refinery/static/source/styles/less/refinery-style.less
@@ -96,14 +96,15 @@ ul#externalToolListPopover li{
 }
 
 //Global analyses status icon/popover
+
 #analyses-popover {
   .popover {
     position: absolute;
     top: 20px !important;
-    left: 0;
+    right: 0 !important;
+    max-width: 425px;
     z-index: 1010;
     display: none;
-    max-width: 800px;
     padding: 1px;
     text-align: left;
   }
